<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Ocho Puzzle</string>
    <string name="appTitle">Ocho Puzzle</string>
    <string name="message">Mensaje</string>
    <string name="Restart">Reiniciar Juego</string>
    <string name="Shuffle">Desordenar</string>
    <string name="Verify">Verificar</string>
    <string name="emptySpace">Casilla vacía</string>

    <string name="number1" translatable="false">1</string>
    <string name="number2" translatable="false">2</string>
    <string name="number3" translatable="false">3</string>
    <string name="number4" translatable="false">4</string>
    <string name="number5" translatable="false">5</string>
    <string name="number6" translatable="false">6</string>
    <string name="number7" translatable="false">7</string>
    <string name="number8" translatable="false">8</string>
    <string name="number9" translatable="false">9</string>
    <string name="number10" translatable="false">10</string>
    <string name="number11" translatable="false">11</string>
    <string name="number12" translatable="false">12</string>
    <string name="number13" translatable="false">13</string>
    <string name="number14" translatable="false">14</string>
    <string name="number15" translatable="false">15</string>
</resources>